# name-my-indie-game-please

./: .gitignore  .travis.yml  CNAME  README  index.html  params.json
client/: Cargo.toml
client/src/: main.rs  render_example.rs
client/src/input/: mod.rs
client/src/prediction/: mod.rs
client/src/renderer/: mod.rs
design docs/: basic gameplay
engine/: Cargo.toml  metrics.json
engine/src/: lib.rs  playercmd.rs
engine/src/component/: components.rs  mod.rs
engine/src/network/: channel.rs  mod.rs  protocol.rs
engine/src/prediction/: mod.rs
engine/src/renderer/: mod.rs
engine/src/renderer_2d/: mod.rs
game/: Cargo.toml
game/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: .lib.rs.swo  bsp.rs  lib.rs  playercmd.rs
shared/src/component/: components.rs  mod.rs
shared/src/entity/: components.rs  mod.rs
shared/src/network/: channel.rs  delta.rs  mod.rs  protocol.rs
shared/src/physics/: collision.rs  mod.rs
