[package]

name = "client"
version = "0.0.1"
authors = ["Nathaniel Theis <nttheis@gmail.com>"]


[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx-rs"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs"
default-features = false

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"

[dependencies.game]
path = "../game"

[dependencies.shared]
path = "../shared"
